"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Run make proto in subdirs. Make sure make doesn't error out on some subdirs
when running make proto in top directory.
 pixmaps/Makefile.am
 gtk/gtkproto.h
 help/Makefile.am
 utils/Makefile.am
 x11/x11proto.h
 gtk-v2/src/gtk2proto.h
Arvid Norlander 2008-06-01

Use the -combine option of gcc to find code (mostly extern inside source instead
of headers), where the definitions didn't agree with each other. Fix most of them.
One (hard to fix) is left, I will look at it later. Also use cproto in common/.
Two sprintf changed to snprintf as well.
 gtk/keys.c
 gtk/gx11.c
 common/proto.h
 x11/x11proto.h
 x11/png.c
 x11/xutil.c
 gtk-v2/src/gtk2proto.h
 gtk-v2/src/keys.c
 gtk-v2/src/info.c
 gtk-v2/src/inventory.c
Arvid Norlander 2008-06-01

Some changes to use snprintf instead of sprintf.
 common/item.c
 common/commands.c
 common/script.c
 common/client.c
 common/image.c
 common/p_cmd.c
 common/player.c
 common/script_lua.c
 common/metaserver.c
 common/misc.c
Arvid Norlander 2008-06-01

Run a script to clean up trailing whitespaces. In this list below "ChangeLog"
is listed due to script cleaning up some whitespaces.
 gtk/gx11.c
 ChangeLog
 help/about.h
 help/shelp.h
 common/item-types.h
 common/mapdata.c
 common/metaserver.c
 gtk-v2/src/stats.c
 gtk-v2/src/spells.c
 gtk-v2/src/config.c
 gtk-v2/src/about.c
 gtk-v2/src/keys.c
 gtk-v2/src/map.c
 gtk-v2/src/metaserver.c
 gtk-v2/src/magicmap.c
 gtk-v2/src/image.c
 gtk-v2/src/png.c
 gtk-v2/src/opengl.c
 gtk-v2/src/main.c
 gtk-v2/src/sound.c
 gtk-v2/src/main.h
 gtk-v2/src/menubar.c
 gtk-v2/src/info.c
 gtk-v2/src/pickup.c
 gtk-v2/src/inventory.c
 gtk-v2/glade/README
Arvid Norlander 2008-06-01

Reorder some structs to waste less memory, also cosmetic changes to struct
definitions.
 common/client.h
 gtk-v2/src/image.h
Arvid Norlander 2008-06-01

More changes of char* to const char*.
 common/item-types.h
 common/items.pl