@@ -31,8 +31,8 @@
 
 #define NUM_COLORS 13
 extern GdkColor root_color[NUM_COLORS];
-GtkWidget *window_root, *spinbutton_count;
-GladeXML *dialog_xml, *window_xml;
+extern GtkWidget *window_root, *spinbutton_count;
+extern GladeXML *dialog_xml, *window_xml;
 
 #define DEFAULT_IMAGE_SIZE      32
 extern int map_image_size, map_image_half_size, image_size;
